--- a/index.html
+++ b/index.html
@@ -225,14 +225,23 @@
             </div>
           </div>
         </div>
-
-
-      </div>
-      
-
+      <!-- contact -->
+        <div class="w3-container w3-content w3-padding-64" id="CONTACT">
+          <h4 class="w3-wide w3-center">CONTACT</h4>
+          <p class="w3-opacity w3-center"><i>You have scrolled this far! Thanks for visiting!</i></p>
+          <div class="w3-row w3-padding-32">
+            <div class="w3-half w3-container w3-margin-bottom">
+              <i class="fa fa-map-marker" style="width:30px;color:white"></i> Singapore, SG<br>
+              <i class="fa fa-phone" style="width:30px;color:white"></i> Phone: +65 9018 1182<br>
+            </div>
+            <div class="w3-half w3-container w3-margin-bottom">
+              <i class="fa fa-university" style="width:30px;color:white"></i> Nanyang Technological University<br>
+              <i class="fa fa-envelope" style="width:30px;color:white"> </i> Email: DSOH010@e.ntu.edu.sg<br>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
-
 </div>
 
 <!--#EXP-->
@@ -416,7 +425,7 @@
 </div> -->
 
   <!-- #CONTACT -->
-<div class="w3-black" id="CONTACT">
+<!-- <div class="w3-black" id="CONTACT">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="CONTACT">
     <h4 class="w3-wide w3-center">CONTACT</h4>
     <p class="w3-opacity w3-center"><i>You have scrolled this far! Thanks for visiting!</i></p>
@@ -431,7 +440,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 
 <!-- Image of location/map -->
