--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 </footer>
 
 <!-- scripts -->
-<script src="particles.js"></script>
+<script src="../particles.js"></script>
 <script src="js/app.js"></script>
 <script
 function myFunction() {
