--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
             </div>
           </div>
         </div>
-      <!-- contact -->
-        <div class="w3-container w3-content w3-padding-64" id="CONTACT">
+        <!-- contact -->
+        <!-- <div class="w3-container w3-content w3-padding-64" id="CONTACT">
           <h4 class="w3-wide w3-center">CONTACT</h4>
           <p class="w3-opacity w3-center"><i>You have scrolled this far! Thanks for visiting!</i></p>
           <div class="w3-row w3-padding-32">
@@ -239,7 +239,8 @@
               <i class="fa fa-envelope" style="width:30px;color:white"> </i> Email: DSOH010@e.ntu.edu.sg<br>
             </div>
           </div>
-        </div>
+        </div> -->
+      </div>
     </div>
   </div>
 </div>
