--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
           <p class="w3-opacity w3-center" style="color:white"><i>You have scrolled this far! Thanks for visiting!</i></p>
           <div class="w3-row w3-padding-32">
             <div class="w3-half w3-container w3-margin-bottom">
-              <i class="fa fa-map-marker" style="width:30px;color:white"></i> Singapore, SG<br>
-              <i class="fa fa-phone" style="width:30px;color:white"></i> Phone: +65 9018 1182<br>
+              <i class="fa fa-map-marker" style="width:30px;color:white">Singapore, SG</i> <br>
+              <i class="fa fa-phone" style="width:30px;color:white">Phone: +65 9018 1182</i> <br>
             </div>
             <div class="w3-half w3-container w3-margin-bottom">
-              <i class="fa fa-university" style="width:30px;color:white"></i> Nanyang Technological University<br>
-              <i class="fa fa-envelope" style="width:30px;color:white"> </i> Email: DSOH010@e.ntu.edu.sg<br>
+              <i class="fa fa-university" style="width:30px;color:white">Nanyang Technological University</i><br>
+              <i class="fa fa-envelope" style="width:30px;color:white">Email: DSOH010@e.ntu.edu.sg</i><br>
             </div>
           </div>
         </div>
@@ -442,10 +442,6 @@
     </div>
   </div>
 </div> -->
-
-
-<!-- Image of location/map -->
-<img src="/images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <!-- <div class="mySlides w3-display-container w3-center">
   <img src="/w3images/astronaut.png" style="width:100%">
