--- a/index.html
+++ b/index.html
@@ -231,12 +231,20 @@
           <p class="w3-opacity w3-center" style="color:white"><i>You have scrolled this far! Thanks for visiting!</i></p>
           <div class="w3-row w3-padding-32">
             <div class="w3-half w3-container w3-margin-bottom">
-              <i class="fa fa-map-marker" style="width:30px;color:white">Singapore, SG</i> <br>
-              <i class="fa fa-phone" style="width:30px;color:white">Phone: +65 9018 1182</i> <br>
+              <i class="fa fa-map-marker" style="width:30px;color:white"></i> 
+              <p style="color: white;">Singapore, SG</p>
+              <br>
+              <i class="fa fa-phone" style="width:30px;color:white"></i> 
+              <p style="color: white;">Phone: +65 9018 1182</p>
+              <br>
             </div>
             <div class="w3-half w3-container w3-margin-bottom">
-              <i class="fa fa-university" style="width:30px;color:white">Nanyang Technological University</i><br>
-              <i class="fa fa-envelope" style="width:30px;color:white">Email: DSOH010@e.ntu.edu.sg</i><br>
+              <i class="fa fa-university" style="width:30px;color:white"></i> 
+              <p style="color: white;">Nanyang Technological University</p>
+              <br>
+              <i class="fa fa-envelope" style="width:30px;color:white"> </i> 
+              <p style="color: white;">Email: DSOH010@e.ntu.edu.sg</p>
+              <br>
             </div>
           </div>
         </div>
