--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="w3-container w3-white" style="padding-bottom:20px;">
               <p><b>Shopee Code League 2022</b></p>
               <p class="w3-opacity">Shopee</p>
-              <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
+              <p>Algorithm Challenge. Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star.
                 Longest common Subsequence. Participation. </p>
               <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
             </div>
@@ -96,7 +96,7 @@
             <div class="w3-container w3-white" style="padding-bottom:20px;">
               <p><b>INTUITION</b></p>
               <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
-              <p>Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
+              <p>MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
                 Image Classification, Keras image processing. First Place in Healthcare Category.</p>
               <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
             </div>
