--- a/index.html
+++ b/index.html
@@ -253,234 +253,13 @@
   </div>
 </div>
 
-<!--#EXP-->
-<!-- <div class="w3-black" id="EXP">
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-    <h2 class="w3-wide w3-center">INTERNSHIP EXPERIENCE</h2>
-    <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
-    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <br></br>
-        <div class="w3-margin-top ">Software Engineer Intern </div>
-        <div class="w3-margin-bottom">(May 2022 - July 2022)</div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <br></br>
-        <img src="/images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <br></br>
-        <div class="w3-margin-top">Algorithm Engineer Intern </div>
-        <div class="w3-margin-bottom">(Aug 2022 - Jan 2023)</div>
-      </div>
-    </div>
-  </div>
-</div> -->
-<!--#HACK-->
-<!--  https://drive.google.com/file/d/1zeqkRtUDyowKAIAN5D4iY8fd3IsRzNEB/view?usp=sharing-->
-<!-- <div class="w3-black" id="HACK">
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-    <h2 class="w3-wide w3-center">HACKATHONS!</h2>
-    <p class="w3-opacity w3-center"><i>Won some lost many</i></p><br>
-
-    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/SCL2.jpeg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white" style="padding-bottom:20px;">
-          <p><b>Shopee Code League 2022</b></p>
-          <p class="w3-opacity">Shopee</p>
-          <p>Algorithm Challenge. Python and Java. BFS, DFS, Dijkstra, Greedy, 
-            Longest common Subsequence. Participation. </p>
-          <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
-        </div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/INTU.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white" style="padding-bottom:20px;">
-          <p><b>INTUITION</b></p>
-          <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
-          <p>Group name: MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
-            Image Classification, Keras image processing. First Place in Healthcare Category.</p>
-          <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
-        </div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/DSTA.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white" style="padding-bottom:20px;">
-          <p><b>Today-I-Learned</b></p>
-          <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
-          <p>Data preperation and cleaning, modified parameters for optimization. 
-            Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
-          <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-<!--#SWE-->
-<!-- <div class="w3-black" id="SWE">
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-    <h2 class="w3-wide w3-center">SOFTWARE ENGINEERING PROJECTS</h2>
-    <p class="w3-opacity w3-center"><i>Tech Stacks: React, Spring, BootStrap... </i></p><br>
-
-    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/TicTacToe.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>Tic-Tac-Toe</b></p>
-          <p class="w3-opacity">CS50x Harvard, Cambridge</p>
-          <p>Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
-          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
-        </div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>Sudoku Auto-generation</b></p>
-          <p class="w3-opacity">NTU</p>
-          <p>Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
-          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
-        </div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/CrossyRoad.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>Crossy Road</b></p>
-          <p class="w3-opacity">NTU</p>
-          <p>Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
-          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
-        </div>
-      </div>
-    </div> -->
-    <!-- Second row of SWE -->
-    <!-- <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/ECommerce.jpg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>E-commerce Website</b></p>
-          <p class="w3-opacity">NTU</p>
-          <p>MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
-          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
-        </div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/AndroidStudio.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>Covid-19 Application</b></p>
-          <p class="w3-opacity">NTU</p>
-          <p>Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
-          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
-        </div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/Twilio.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>Twilio Chatbot</b></p>
-          <p class="w3-opacity">Personal</p>
-          <p>Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-  <!-- #ML -->
-<!-- <div class="w3-black" id="ML">
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-    <h3 class="w3-wide w3-center">MACHINE LEARNING PROJECTS</h3>
-    <p class="w3-opacity w3-center"><i>The all seeing eye of Coding</i></p><br>
-
-    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>AI Test Kitchen</b></p>
-          <p class="w3-opacity">Google</p>
-          <p>Natural Language Processing</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
-        </div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/NotNowLizards.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>Not now lizards!</b></p>
-          <p class="w3-opacity">MLDA</p>
-          <p>Computer Vision, Arduino, ROS</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
-        </div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/Titanic.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>Titanic Disaster Prediction</b></p>
-          <p class="w3-opacity"></p>
-          <p>ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
-          <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-      <div class="w3-third w3-margin-bottom">
-        <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>Basic MediaPipe</b></p>
-          <p class="w3-opacity"></p>
-          <p>Computer Vision</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-
-  <!-- #CONTACT -->
-<!-- <div class="w3-black" id="CONTACT">
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="CONTACT">
-    <h4 class="w3-wide w3-center">CONTACT</h4>
-    <p class="w3-opacity w3-center"><i>You have scrolled this far! Thanks for visiting!</i></p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-half w3-container w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px;color:white"></i> Singapore, SG<br>
-        <i class="fa fa-phone" style="width:30px;color:white"></i> Phone: +65 9018 1182<br>
-      </div>
-      <div class="w3-half w3-container w3-margin-bottom">
-        <i class="fa fa-university" style="width:30px;color:white"></i> Nanyang Technological University<br>
-        <i class="fa fa-envelope" style="width:30px;color:white"> </i> Email: DSOH010@e.ntu.edu.sg<br>
-      </div>
-    </div>
-  </div>
-</div> -->
-
-<!-- <div class="mySlides w3-display-container w3-center">
-  <img src="/w3images/astronaut.png" style="width:100%">
-  <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-    <h3>About Me</h3>
-    <p><b>Darren Soh</b></p>    
-  </div>
-</div>
-<div class="mySlides w3-display-container w3-center">
-  <img src="/w3images/astronaut.png" style="width:100%">
-  <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-    <h3>Hobbies</h3>
-    <p><b>Coding, Hackerank, Fitness enthusiast, Reading, Sports</b></p>    
-  </div>
-</div>
-<div class="mySlides w3-display-container w3-center">
-  <img src="/w3images/astronaut.png" style="width:100%">
-  <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-    <h3>Tech Stacks</h3>
-    <p><b>Android Programming, React, Spring Boot, Spring Data JPA, PostGreSQL, MYSQL, Restful API, Apache Tomcat</b></p>    
-  </div>
-</div> -->
-
-
 
 <br></br>
 <!-- #ART -->
 
-<div class="w3-black" id="ART"></div>
+<!-- <div class="w3-black" id="ART"></div> -->
 
-<iframe src="https://hubs.mozilla.com/ZBwTESQ?embed_token=a84a4e4fdf664dea5c7f57d0484f9474" style="text-align:center; width: 1400px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
+<!-- <iframe src="https://hubs.mozilla.com/ZBwTESQ?embed_token=a84a4e4fdf664dea5c7f57d0484f9474" style="text-align:center; width: 1400px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe> -->
 
 
 
@@ -506,5 +285,5 @@ function myFunction() {
   }>
 </script>
 
-</body>
 </html>
+</body>
