--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="typewriter" >
         <!-- <h1 style="inline-size: 300px;overflow-wrap: break-word;"> I think life is greater with Coding</h1> -->
         <h1>
-          <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Si.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+          <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Darren.", "Software Engineer is my dream.", "I Love Design.", "I Love to Develop." ]'>
             <span class="wrap"></span>
           </a>
         </h1>
