--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
       <div class="typewriter" >
-        <h1 style="inline-size: 300px; overflow-wrap: break-word;"> I think life is greater with Coding</h1>
+        <span1 style="inline-flex: 300px; color:white; font: sans-serif; font-size:x-large;">Hi, I am Darren Soh and I think life is greater with Coding</span1>
         <!-- <h1>
           <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Darren.", "Software Engineer is my dream.", "I Love Design.", "I Love to Develop." ]'>
             <span class="wrap"></span>
