--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
           <div class="w3-third w3-margin-bottom">
             <img src="/images/SCL2.jpeg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
             <div class="w3-container w3-white" style="padding-bottom:20px;">
-              <p><b>Shopee Code League 2022</b></p>
-              <p class="w3-opacity">Shopee</p>
-              <p>Algorithm Challenge. Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star.
+              <p style="color:black"><b>Shopee Code League 2022</b></p>
+              <p class="w3-opacity" style="color:black">Shopee</p>
+              <p style="color:black">Algorithm Challenge. Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star.
                 Longest common Subsequence. Participation. </p>
               <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
             </div>
@@ -99,9 +99,9 @@
           <div class="w3-third w3-margin-bottom">
             <img src="/images/INTU.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
             <div class="w3-container w3-white" style="padding-bottom:20px;">
-              <p><b>INTUITION</b></p>
-              <p class="w3-opacity">IEEE INTUITION v8.0 2022</p>
-              <p>MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
+              <p style="color:black"><b>INTUITION</b></p>
+              <p class="w3-opacity" style="color:black">IEEE INTUITION v8.0 2022</p>
+              <p style="color:black">MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
                 Image Classification, Keras image processing. First Place in Healthcare Category.</p>
               <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
             </div>
@@ -109,9 +109,9 @@
           <div class="w3-third w3-margin-bottom">
             <img src="/images/DSTA.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
             <div class="w3-container w3-white" style="padding-bottom:20px;">
-              <p><b>Today-I-Learned</b></p>
-              <p class="w3-opacity">DSTA, BRAINHACK 2021</p>
-              <p>Data preperation and cleaning, modified parameters for optimization. 
+              <p style="color:black"><b>Today-I-Learned</b></p>
+              <p class="w3-opacity" style="color:black">DSTA, BRAINHACK 2021</p>
+              <p style="color:black">Data preperation and cleaning, modified parameters for optimization. 
                 Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
               <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
             </div>
@@ -126,9 +126,9 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/TicTacToe.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>Tic-Tac-Toe</b></p>
-                <p class="w3-opacity">CS50x Harvard, Cambridge</p>
-                <p>Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
+                <p style="color:black"><b>Tic-Tac-Toe</b></p>
+                <p class="w3-opacity" style="color:black">CS50x Harvard, Cambridge</p>
+                <p style="color:black">Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
                 <!-- <button class="w3-button w3-black w3-margin-bottom">View Project</button> -->
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
               </div>
@@ -136,18 +136,18 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>Sudoku Auto-generation</b></p>
-                <p class="w3-opacity">NTU</p>
-                <p>Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
+                <p style="color:black"><b>Sudoku Auto-generation</b></p>
+                <p class="w3-opacity" style="color:black">NTU</p>
+                <p style="color:black">Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/CrossyRoad.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>Crossy Road</b></p>
-                <p class="w3-opacity">NTU</p>
-                <p>Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
+                <p style="color:black"><b>Crossy Road</b></p>
+                <p class="w3-opacity" style="color:black">NTU</p>
+                <p style="color:black">Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
               </div>
             </div>
@@ -157,27 +157,27 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/ECommerce.jpg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>E-commerce Website</b></p>
-                <p class="w3-opacity">NTU</p>
-                <p>MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
+                <p style="color:black"><b>E-commerce Website</b></p>
+                <p class="w3-opacity" style="color:black">NTU</p>
+                <p style="color:black">MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/AndroidStudio.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>Covid-19 Application</b></p>
-                <p class="w3-opacity">NTU</p>
-                <p>Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
+                <p style="color:black"><b>Covid-19 Application</b></p>
+                <p class="w3-opacity" style="color:black">NTU</p>
+                <p style="color:black">Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/Twilio.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>Twilio Chatbot</b></p>
-                <p class="w3-opacity">Personal</p>
-                <p>Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
+                <p style="color:black"><b>Twilio Chatbot</b></p>
+                <p class="w3-opacity" style="color:black">Personal</p>
+                <p style="color:black">Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
                 <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
               </div>
             </div>
@@ -192,27 +192,27 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>AI Test Kitchen</b></p>
-                <p class="w3-opacity">Google</p>
-                <p>Natural Language Processing</p>
+                <p style="color:black"><b>AI Test Kitchen</b></p>
+                <p class="w3-opacity" style="color:black">Google</p>
+                <p style="color:black">Natural Language Processing</p>
                 <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/NotNowLizards.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>Not now lizards!</b></p>
-                <p class="w3-opacity">MLDA</p>
-                <p>Computer Vision, Arduino, ROS</p>
+                <p style="color:black"><b>Not now lizards!</b></p>
+                <p class="w3-opacity" style="color:black">MLDA</p>
+                <p style="color:black">Computer Vision, Arduino, ROS</p>
                 <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/Titanic.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>Titanic Disaster Prediction</b></p>
-                <p class="w3-opacity"></p>
-                <p>ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
+                <p style="color:black"><b>Titanic Disaster Prediction</b></p>
+                <p class="w3-opacity" style="color:black"></p>
+                <p style="color:black">ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
               </div>
             </div>
@@ -222,15 +222,15 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p><b>Basic MediaPipe</b></p>
-                <p class="w3-opacity"></p>
-                <p>Computer Vision</p>
+                <p style="color:black"><b>Basic MediaPipe</b></p>
+                <p class="w3-opacity" style="color:black"></p>
+                <p style="color:black">Computer Vision</p>
                 <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
               </div>
             </div>
           </div>
         </div>
-        <!-- contact -->
+        <!-- Contact -->
         <div class="w3-container w3-content w3-padding-64" id="CONTACT">
           <h4 class="w3-wide w3-center" style="color:white">CONTACT</h4>
           <p class="w3-opacity w3-center" style="color:white"><i>You have scrolled this far! Thanks for visiting!</i></p>
