--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
             <div class="w3-container w3-white" style="padding-bottom:20px;">
               <p style="color:black"><b>Shopee Code League 2022</b></p>
               <p class="w3-opacity" style="color:black">Shopee</p>
-              <p style="color:black">Algorithm Challenge. Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star.
-                Longest common Subsequence. Participation. </p>
+              <p style="color:black">Hackerank, Leetcode kind of Algorithm Challenge (was super difficult). Mandates: Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star. Longest common Subsequence. Awarded: Participation only. </p>
               <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
             </div>
           </div>
@@ -101,8 +100,7 @@
             <div class="w3-container w3-white" style="padding-bottom:20px;">
               <p style="color:black"><b>INTUITION</b></p>
               <p class="w3-opacity" style="color:black">IEEE INTUITION v8.0 2022</p>
-              <p style="color:black">MC for ART. Telegram bot with google script API. CNN model launched in google cloud, 
-                Image Classification, Keras image processing. First Place in Healthcare Category.</p>
+              <p style="color:black">Issue MC for positive ART with Bot Father Telegram. Mandates: Google Cloud ML services, Google script API. Data Augmentation. Keras Image Processing. Awarded: First Place in Open Healthcare Category.</p>
               <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
             </div>
           </div>
@@ -111,8 +109,7 @@
             <div class="w3-container w3-white" style="padding-bottom:20px;">
               <p style="color:black"><b>Today-I-Learned</b></p>
               <p class="w3-opacity" style="color:black">DSTA, BRAINHACK 2021</p>
-              <p style="color:black">Data preperation and cleaning, modified parameters for optimization. 
-                Utilized OpenCV and RESNET for our model to identify objects from Datasets. Ninth Overall</p>
+              <p style="color:black">First Hackathon! Mandates: Data Exploratory Analysis. Data Cleaning. Model Tuning. OpenCV library. RESNET50 for Image Classification and Speech Classification. Awarded: Ninth Place in Open Category.</p>
               <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
             </div>
           </div>
@@ -258,8 +255,8 @@
   </div>
 </div>
 
-
-<br></br>
+<!-- 
+<br></br> -->
 <!-- #ART -->
 
 <!-- <div class="w3-black" id="ART"></div> -->
